--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">GENIE</string>
+    <string name="app_name">Gi 1</string>
     <string name="enter_your_registered_email">Enter your registered email</string>
     <string name="enter_your_password">Enter your password</string>
     <string name="enter_your_password_confirm">Enter your password confirm</string>
@@ -22,4 +22,7 @@
     <string name="add_caption">Add Caption</string>
     <string name="upload">Upload</string>
     <string name="caption">Caption</string>
+    <string name="title_activity_view_live">ViewLiveActivity</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
 </resources>
